Clean Up Pom