@@ -59,7 +59,6 @@
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.cucumber.json.transformations.all</project.Automatic-Module-Name>
 		<project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
-		<!--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}=ALL-UNNAMED</project.surefire.argLine.jpms.module>-->
 		<spotbugs.skip>true</spotbugs.skip>
 	</properties>
 </project>
